infrastructure/k8s/remote-aks/ingress-srv.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
      - http:
          paths:
            - path: /api/organizations/?(.*)
              pathType: Prefix
              backend:
                serviceName: organizations-srv
                servicePort: 3000
            - path: /api/users/?(.*)
              pathType: Prefix
              backend:
                serviceName: users-srv
                servicePort: 3000
            - path: /api/admins/?(.*)
              pathType: Prefix
              backend:
                serviceName: admins-srv
                servicePort: 3000
            - path: /api/survey/?(.*)
              pathType: Prefix
              backend:
                serviceName: survey-srv
                servicePort: 3000
